# AXON-HLT

./: .gitignore  CITATION.cff  Dockerfile  LICENSE  Makefile  README.md  docker-compose.no-batching.yml  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-publish.yml
model_repository/particle_classifier_v1/: config.pbtxt
model_repository/particle_classifier_v1/1/: model.onnx
model_repository/particle_classifier_v2/: config.pbtxt
model_repository/particle_classifier_v2/1/: model.onnx
model_repository_no_batching/particle_classifier_v1/: config.pbtxt
model_repository_no_batching/particle_classifier_v1/1/: model.onnx
model_repository_no_batching/particle_classifier_v2/: config.pbtxt
model_repository_no_batching/particle_classifier_v2/1/: model.onnx
results/: benchmark_batching_off.json  benchmark_batching_on.json  benchmark_no_batching_sweep.json  benchmark_sweep.json  benchmark_v2_c64.json
scripts/: benchmark.py  plot_results.py  train.py
src/axon/: __init__.py  benchmark.py  client.py  data.py  export.py  metrics.py  model.py  plot.py  train.py
tests/: test_data.py  test_export.py  test_model.py
